# django_api_project

./: .gitignore  mkdocs.yml  pyproject.toml
django_api_project/django_api_project/: settings.py  urls.py
django_api_project/favorites/: admin.py  models.py  urls.py  views.py
django_api_project/favorites/migrations/: 0001_initial.py
django_api_project/favorites/templates/favorites/: dashboard.html
django_api_project/login/: apps.py  models.py  urls.py  views.py
django_api_project/login/templates/registration/: base.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
django_api_project/rick_morty/: views.py
django_api_project/rick_morty/templates/rick_morty/: index.html
docs/: index.md
docs/developer/: characters.md  favorites.md
